index.less
/* ... */
select.md-select {
    color           : var(--textColor);
    background-color: var(--menuBackgroundColor);
    border          : 1px solid var(--contentBorderColor);

    optgroup {
        color           : var(--textColor);
        background-color: var(--menuBackgroundColor);

        option {
            background-color: var(--menuBackgroundColor);
            margin          : 0;
            padding         : 0;
            text-align      : center;
        }
    }
}

.menu-panel .menu-panel-body {
    background-color: var(--menuBackgroundColor);
    backdrop-filter : blur(8px);
    color           : var(--textColor);

    & .menu-body {
        padding: 0;

        .svg-icon {
            color  : var(--keyColor);
            --color: var(--keyColor);
        }
    }

    & .menu-option {
        border-radius       : 0;
        width               : 100%;
        padding-inline-start: 14px;
        padding-block       : 10px;

        &::before {
            --sizeX      : 0px;
            --sizeY      : 0px;
            border-radius: 0;
        }

        +.menu-option {
            margin-top: -1px;
        }

        &:not(:last-of-type) {
            border-bottom: 1px solid var(--subtleBorderColor);
        }

    }
}

.settings-panel {
    background     : rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(16px);

    .settings-window {
        .tabs .tab-content {
            .md-option-header {
                padding-bottom: 1rem;
                border-bottom : 1px solid var(--contentBorderColor);
                font-weight   : bold;
            }

            .md-option-line:not(:last-child) {
                border-bottom: 1px solid var(--contentBorderColor);
            }

            .audiolabs-page {
                .settings-option-body {
                    margin-top: 0;
                }

                .md-option-line:first-child {
                    padding-top: 0;

                    .display-3 {
                        margin-top: 0;

                    }
                }
            }
        }
    }
}

@media (prefers-color-scheme: light) {
    @import "theme/lightmode.less";

}

// Only changing the CSS for the Music Video Container
#apple-music-video-container {

    // Style Captions
    #captions:not(:empty) {
        color         : var(--textColorLight);
        font-size     : 1.75rem;
        padding-inline: 10px;
        padding-block : 5px;
        border-radius : 10px;
        font-family   : var(--fontStyle);
        margin-top    : 6vh;
    }

    // AM Web Style Fullscreen Button
    #player-fullscreen {
        background         : url("icons/fullscreen.svg");
        background-size    : 50%;
        background-position: center;
        background-repeat  : no-repeat;
        filter             : opacity(0.6);
        // filter: drop-shadow(0px 0px 4px rgb(0 0 0 / 80%));
        background-color   : var(--mediaBarColor);
        border-radius      : 10px;
        transition         : 0.2s ease-in-out filter;
        bottom             : 0;

        &:hover {
            filter    : opacity(1);
            transition: 0.2s ease-in-out filter;
        }

        svg {
            display: none;
        }
    }

    // AM Web Style PiP Button
    #player-pip {
        background-color: var(--mediaBarColor);
        border-radius   : 10px;
        bottom          : 0;
        filter          : opacity(0.6);
        transition      : 0.2s ease-in-out filter;

        &:hover {
            filter    : opacity(1);
            transition: 0.2s ease-in-out filter;
        }
    }

    .playback-info {
        width           : 100%;
        bottom          : 0;
        left            : 0;
        padding         : 20px 40px;
        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%);
    }

    input[type="range"] {
        align-self   : center;
        height       : 4px;
        border-radius: .5rem;
        margin-inline: 10px;
    }

    p {
        color: rgb(255, 255, 255, 1);
    }

    .song-artist {
        font-size  : 1.7rem;
        font-weight: bold;
        color      : rgb(255, 255, 255, 1);
    }

    .song-name {
        font-size  : 1.2rem;
        font-weight: bold;
        color      : rgb(255, 255, 255, 0.8);
    }

    .song-progress input[type="range"] {
        appearance: initial;

        &::-webkit-slider-thumb {
            box-shadow        : 0px 0px 0px #000000;
            border            : 1px solid #39404D;
            background        : #fff;
            height            : 0.7rem;
            width             : 0.7rem;
            border-radius     : 50%;
            cursor            : pointer;
            -webkit-appearance: none;
        }
    }
}



@media only screen and (max-width: 1120px) {
    #app {
        .app-chrome--left .app-chrome-item:nth-of-type(2) {
            margin-left: 115px !important;
        }
    }

    #app.macosemu {
        .app-chrome--left .app-chrome-item:nth-of-type(2) {
            margin-left: 180px !important;
        }

        .app-chrome--right {
            width: 20% !important;
        }
    }
}

